stirling-pdf/stirling-pdf-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stirling-pdf
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: stirling-pdf
