stirling-pdf/stirling-pdf-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: stirling-pdf
spec:
  entryPoints:
    - web
  routes:
    - match: Host('stirling-pdf.drhack.org')
      kind: Rule
      services:
        - name: stirling-pdf
          port: 80
